[metadata]
name = uprotocol-zenoh-python
author = Neelam Kushwah
author_email = neelam.kushwah@gm.com
description = UProtocol ULink Zenoh Python
version = 1
keywords =
  uprotocol
  ulink
  zenoh
  python

[options]
python_requires = >= 3.8
packages = find:
zip_safe = False
install_requires =
  uprotocol-sdk-python #path of uprotocol-sdk-python (https://github.com/eclipse-uprotocol/uprotocol-sdk-python.git)
  eclipse-zenoh

